add SSE based /metadata endpoint
